--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,6 +17,9 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link active" href="/dashboard">Dashboard</a></li>
                     <li class="nav-item"><a class="nav-link" href="/groups">Formar Grupos</a></li>
+                    <!-- Nuevas pestañas para calibrar y asignar asientos -->
+                    <li class="nav-item"><a class="nav-link" href="/calibrate_seats">Calibrar Asientos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/assign_seats">Asignar Asientos</a></li>
                 </ul>
             </div>
         </div>
