--- a/templates/assign_seats.html
+++ b/templates/assign_seats.html
@@ -19,6 +19,7 @@
                     <li class="nav-item"><a class="nav-link" href="/groups">Formar Grupos</a></li>
                     <li class="nav-item"><a class="nav-link" href="/calibrate_seats">Calibrar Asientos</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/assign_seats">Asignar Asientos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/quick_scan">Escaneo Rápido</a></li>
                 </ul>
             </div>
         </div>
@@ -31,12 +32,8 @@
 
         <h3 class="mb-3"><i class="fas fa-chair me-2"></i>Asignar Estudiantes a Asientos</h3>
         <p>Seleccione un estudiante para cada asiento disponible. Puede dejarlo sin asignar seleccionando la opción "Sin asignar".</p>
-        <div class="table-responsive">
-            <table class="table table-dark-custom" id="assignTable">
-                <thead><tr><th>Asiento</th><th>Asignación</th></tr></thead>
-                <tbody></tbody>
-            </table>
-        </div>
+        <!-- Contenedor de tarjetas para cada asiento -->
+        <div id="assignCards" class="row gy-3"></div>
         <a href="/dashboard" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Volver al Dashboard</a>
     </div>
 
