--- a/templates/calibrate_seats.html
+++ b/templates/calibrate_seats.html
@@ -41,6 +41,7 @@
                     <li class="nav-item"><a class="nav-link" href="/groups">Formar Grupos</a></li>
                     <li class="nav-item"><a class="nav-link active" href="/calibrate_seats">Calibrar Asientos</a></li>
                     <li class="nav-item"><a class="nav-link" href="/assign_seats">Asignar Asientos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/quick_scan">Escaneo Rápido</a></li>
                 </ul>
             </div>
         </div>
